--- a/BatmanMadBelt/Experience.rcproject/com.apple.RCFoundation.Project
+++ b/BatmanMadBelt/Experience.rcproject/com.apple.RCFoundation.Project
@@ -1014,6 +1014,13 @@
                           }
                         ],
                         [
+                          "material",
+                          {
+                            "typeName" : "String",
+                            "value" : "clearCoatPaint"
+                          }
+                        ],
+                        [
                           "materialColor",
                           {
                             "typeName" : "double4",
@@ -1781,6 +1788,7 @@
                     }
                   },
                   "CD6D5F50-B198-4A81-B445-236E43C06FFF" : null,
+                  "CD13BD0B-194E-4C4D-A46E-117DCAC9F40F" : null,
                   "D2FD618A-24A1-40CE-AFBB-7194B7C216CE" : null,
                   "D6B2D1D2-DAAE-4840-838D-C7E1114C4A94" : {
                     "overrides" : {
@@ -2064,21 +2072,21 @@
               "title" : "BatCave",
               "viewTransform" : {
                 "cameraTransform" : [
-                  0.95504295825958252,
-                  1.1920928955078125e-07,
-                  0.29646721482276917,
+                  0.98866671323776245,
+                  1.189764731179821e-07,
+                  0.15012715756893158,
                   0,
-                  0.22836166620254517,
-                  0.63771045207977295,
-                  -0.73564684391021729,
+                  0.077004797756671906,
+                  0.85842996835708618,
+                  -0.50711745023727417,
                   0,
-                  -0.18906028568744659,
-                  0.77027642726898193,
-                  0.60904049873352051,
+                  -0.12887366116046906,
+                  0.51293098926544189,
+                  0.84870082139968872,
                   0,
-                  -1.8800475597381592,
-                  5.846580982208252,
-                  5.5124034881591797,
+                  -1.1680014133453369,
+                  3.7903299331665039,
+                  6.7887320518493652,
                   1
                 ],
                 "sceneTransform" : [
